--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="container home">
-
+    <img src="/img/main-header.png">
     <header class="intro">
       <!-- image code here -->
       <img src="/img/main-header.png">
