sticky header with opacity

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- navigation code here -->
 
   <div class="space-walk">
+    <header>
     <h1>SpaceWalkers</h1>
     <nav class="links-parent">
       <div class="nav-links">
@@ -32,6 +33,7 @@
         <a href="#SignIn" class="signin">Sign In</a>
       </div>
     </nav>
+  </header>
   </div>
 
   <div class="container home">
